update module gestion personal

--- a/src/components/gestion-personal/Evaluaciones.astro
+++ b/src/components/gestion-personal/Evaluaciones.astro
@@ -1,6 +1,6 @@
 ---
 // src/components/gestion-personal/Evaluaciones.astro
-import "../styles/global.css";
+import "../../styles/global.css";
 const evaluaciones = [
   {
     empleado: "Juan Pérez",
