--- a/src/components/gestion-personal/TablaEmpleados.astro
+++ b/src/components/gestion-personal/TablaEmpleados.astro
@@ -1,6 +1,6 @@
 ---
 // src/components/gestion-personal/TablaEmpleados.astro
-import "../styles/global.css";
+import "../../styles/global.css";
 const empleados = [
   {
     id: "EMP001",
