modulo de desarrollo personal terminado

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import "../styles/global.css";
       <DashboardCard 
         titulo="Desarrollo Profesional"
         descripcion="Gestiona capacitaciones y certificaciones"
-        enlace="/desarrollo"
+        enlace="/desarrollo-profesional"
         icono="📚"
       />
       <DashboardCard 
