modulo de nominas terminado

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,13 @@ import "../styles/global.css";
         enlace="/calendario"
         icono="📅"
       />
+
+	  <DashboardCard 
+        titulo="Nominas"
+        descripcion="Gestion de Pagos, Beneficios y Reportes"
+        enlace="/nominas"
+        icono="📅"
+      />
     </div>
   </div>
 </Layout>
