modulo de configuracion subido

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,13 @@ import "../styles/global.css";
         enlace="/nominas"
         icono="📅"
       />
+
+	  <DashboardCard 
+        titulo="Roles y Permisos"
+        descripcion="Gestion roles y permisos"
+        enlace="/configuracion"
+        icono="📅"
+      />
     </div>
   </div>
 </Layout>
